FIX Add separate endpoint for mapped tasks
